# autonomous-engineer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  mprocs.yaml  pyproject.toml  sweep.yaml
abilities/hello_world/: hello_world.py
abilities/tmux/: interact.py
assistant/: config.yml
assistant/actions/: actions.py
assistant/data/: stories.yml
chatbot/: domain.yml
chatbot/actions/: actions.py
chatbot/data/: nlu.yml  rules.yml  stories.yml
chatbot/tests/: test_stories.yml
discord-bot/: Procfile  fly.prod.toml  fly.toml  main.py  pyproject.toml  server.py
notebooks/: exploration-notebook.py
ui/: .gitignore  package.json  webpack.config.js
ui/public/: index.html  webpack_template.html
ui/src/Widget/: index.jsx
