[tool.poetry]
name = "autonomous-engineer"
version = "0.1.0"
description = "An experiment to see how well a LLM-powered assistant is able to perform tasks of a software engineer"
authors = ["Motin <motin@motin.eu>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "abilities"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
botocore = "^1.29.126" # required version constraint for rasa to install
rasa = "^3.5.10"
libtmux = "^0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
