[tool.poetry]
name = "autonomous-engineer"
version = "0.1.0"
description = "An experiment to see how well a LLM-powered assistant is able to perform tasks of a software engineer"
authors = ["Motin <motin@motin.eu>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "abilities"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
botocore = "^1.29.126" # required version constraint for rasa to install
rasa = "^3.5.10"
libtmux = "^0.22.1"
langchain = "^0.0.203"
openai = "^0.27.8"
gpt4all = "^0.3.4"

[tool.poetry.group.dev.dependencies]
coverage = "^6.3.2"
freezegun = "^1.2.1"
poethepoet = "^0.13.1"
pre-commit = "^2.18.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.6.0"
jupytext = "^1.14.4"
pytest-mock = "^3.6.1"
tokmon = "^0.2.1"
mitmproxy = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = ["pytest", "lint"]
pytest = "pytest --cov=abilities --verbose tests/"
lint = { shell = "find . -type d -name '.venv*' -prune -o -type f -name '*.py' -print0 | xargs -0 pre-commit run --files" }
install_kernel = "python -m ipykernel install --user --name autonomous-engineer"

[tool.poe]
envfile = ".env"

[tool.ruff]
force-exclude = true
