[tool.poetry]
name = "autonomous-engineer-discord-bot"
version = "0.1.0"
description = ""
authors = ["Motin <motin@motin.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.2"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
