[tool.poetry]
name = "autonomous-engineer-discord-bot"
version = "0.1.0"
description = ""
authors = ["Motin <motin@motin.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.2"
pydantic = "^2.4.2"
fastapi = "^0.104.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
